# Internal_ai_assistance

./: .dockerignore  Dockerfile  Dockerfile.ollama  ai_test_bug_report.txt  ai_test_user_feedback.txt  check.txt  docker-compose.yml  main.py  node.py  pyproject.toml
chromadb/96e44414-dd51-411c-8358-1b66b8f54368/: index_metadata.pickle
