[project]
name = "investic-pj"
version = "0.1.0"
description = "Internal AI assistance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.0",
    "fastapi>=0.121.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "pydantic>=2.12.3",
]
